--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "underscore": "~1.4.4",
-    "underscore.string": "~2.3.1",
-    "bunyan":"~0.17.0"
+    "underscore.string": "~2.3.1"
   },
   "devDependencies": {
     "coffee-script": "~1.4.0",
